# WeatherCRUDAPI

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  api.py  data_access.py  data_types.py  errors.py
scripts/: linting_typing.sh
tests/: conftest.py  test_datatypes.py  test_endpoints.py
