[project]
name = "weathercrudapi"
version = "0.1.0"
description = "API to view add and remove weather"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-restx>=1.3.0",
    "mypy>=1.16.0",
    "pip-audit>=2.9.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
